Clean up components and fix broken styles
Add title, centre connect button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  [data-visible] {
+    @apply col-start-1 row-start-1 data-[visible='false']:invisible;
+  }
+
+  .contents-layered {
+    @apply grid grid-cols-1 grid-rows-1;
+  }
+}
